--- a/app/views/shared/_demand_modal.html.haml
+++ b/app/views/shared/_demand_modal.html.haml
@@ -7,7 +7,7 @@
       %p Tell when you would like to come, a bit about yourself, and how you would like to be contacted back (phone, mail...)
     .modal-body
       %fieldset
-        = f.input :date, input_html: { rows: 4, class: 'span4 date_picker' }
+        = f.input :requested_on, input_html: { rows: 4, class: 'span4 date_picker' }
         = f.input :body, as: :text, input_html: { rows: 4, class: 'span4' }
 
     .modal-footer
