--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,14 +1,14 @@
-.row
+.row.user
   .span3
     - if @user.photo?
       = image_tag(@user.photo_url(:profile))
     - else 
-      = image_tag('http://cambelt.co/icon/avatar/320x240')
+      = image_tag('http://cambelt.co/icon/avatar/320x320')
   .span9
-    %h1= "#{@user.username}"
-    %hr
+    %h2
+      = @user.name
 
-    %table.table.table-striped
+    %table.table.table-condensed
       %tbody
         %tr
           %th.span2 Email
