--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,4 +1,4 @@
-.row.user
+.row.users
   .span3
     - if @user.photo?
       = image_tag(@user.photo_url(:profile))
@@ -7,6 +7,7 @@
   .span9
     %h2
       = @user.name
+      = @user.id
 
     %table.table.table-condensed
       %tbody
