--- a/app/views/places/index.html.haml
+++ b/app/views/places/index.html.haml
@@ -22,7 +22,7 @@
 %hr
 
 = form_tag places_path, method: :get, class: 'form-inline'  do
-  = select_tag "cities", options_for_select(@place_names), multiple: true, class: 'span6'
+  = select_tag "cities", options_for_select(@place_names), multiple: true, class: 'span6 chzn-select'
   = submit_tag t('search'), class: 'btn btn-info', :style => "margin-top : -25px;"
 
 %hr
@@ -66,5 +66,4 @@
           
 .row
   .span12
-    -#
-      = paginate @places, theme: 'bootstrap'
+    = paginate @places, theme: 'bootstrap'
