--- a/app/views/home/map.html.haml
+++ b/app/views/home/map.html.haml
@@ -4,7 +4,7 @@
       .controls
         .input-append
           = select_tag "cities", options_for_select(Place.uniq.pluck(:city)), multiple: true, class: 'span7 chzn-select'
-          = submit_tag t('search'), class: 'btn'
+          = submit_tag t('search'), class: 'btn search_btn'
   .span4.last
     = link_to new_place_path, { class: 'btn btn-info' } do
       %i.icon-map-marker.icon-white
