label for business in now green pro

--- a/app/views/places/index.html.haml
+++ b/app/views/places/index.html.haml
@@ -43,8 +43,8 @@
                 %span.label.label-info.pull-right.upcase 
                   public
               - elsif place.business?
-                %span.label.label-info.pull-right.upcase 
-                  business
+                %span.label.label-success.pull-right.upcase 
+                  pro
               - else
                 %span.label.label-warning.pull-right.upcase 
                   private
