cleaned labels (added pro/business and made pro and public always visible)

--- a/app/views/places/show.html.haml
+++ b/app/views/places/show.html.haml
@@ -34,11 +34,14 @@
     %p
       %INPUT{:class => "btn btn-info span3 btn-large", :TYPE => "button", :VALUE => "Invite friends there", :onClick => "parent.location='mailto:Friends email here?subject=Invitation to cowork&Body=I found this awesome place to work. Would you join me there? Check it out: http://#{request.host+request.fullpath}'"} 
       %span.pull-right
+        - if @place.public?
+          %span.label.label-info.upcase 
+            = t('place.public')
+        - elsif @place.business?
+          %span.label.label-success.upcase
+            = t('place.business')
         - unless @place.user == current_user
-          - if @place.public?
-            %span.label.label-info.upcase 
-              = t('place.public')
-          - else
+          - if @place.private?
             %a.btn.btn-large{href:'#demand', :'data-toggle' => 'modal'} 
               %i.icon-white.icon-lock
               = t('place.demand')
