--- a/app/views/places/index.html.haml
+++ b/app/views/places/index.html.haml
@@ -23,7 +23,7 @@
 
 = form_tag places_path, method: :get, class: 'form-inline'  do
   = select_tag "cities", options_for_select(@place_names), multiple: true, class: 'span6 chzn-select'
-  = submit_tag t('search'), class: 'btn btn-info', :style => "margin-top : -25px;"
+  = submit_tag t('search'), class: 'btn btn-info search_btn'
 
 %hr
 
