updated contribute page

--- a/app/views/home/contribute.html.haml
+++ b/app/views/home/contribute.html.haml
@@ -11,26 +11,119 @@
 %p Find local ambassadors 
 %p Write to all the users and ask for feedback (Jérémie)
 %p Spot the power users and reward them (Jérémie)
+%hr
 %p
-%h2 Bugs
-
-%p Request -> Demands does not work
-%p Picture resizing on profiles
-%p (see list on Github)
+%h2 Fixing
 %p
-%h2 Backend
-
-%p Postgresql
-%p Active record reputation system
-%p Write tests 
+  Invitation mail is broken
+  %br/
+  request -> sent and request -> received give an error
+  %br/
+  Fix place page
+  %br/
+  when you add a place making a mistake filing the forms, the picture disappears after the web page refresh.
+  %br/
+  cropping of photo
+  %br/
+  Fix the search bar on places/index
+  %br/
+  “Your place” shows all places
+  %br/
+%hr
+%h2 Optimizing
 %p
+  Optimize the js
+  %br/
+  + clean
+  %br/
+  + compressing (.min)
+  %br/
+  + have a framework for js (backbone
+  %br/
+  Make responsive
+  %br/
+  Improve the load time for the list
+  %br/
+  Infinite scrolling
+%hr
 %h2 New features
-
-%p Make one search bar for list/map/people with autocomplete with cities/names/criteria
-%p Invite friends 
-%p Make groups 
-%p Connect with coworfers around
-
+%p
+  Admin can edit all the profiles / places
+  %br/
+  Pagination for users
+  %br/
+  Reputation system (twitter active record)
+  %br/
+  Omniauth
+  %br/
+  Facebook application (checkin at places, timeline integration, invite friends to cowork somewhere)
+  %br/
+  Next/Previous button on profile pages and places
+  %br/
+  Users tag themselves
+  %br/
+  Include requests on the map
+  %br/
+  Add to place profile
+  %br/
+  + Price for pro places
+  %br/
+  + Hours
+  %br/
+  + Contact (phone or mail)
+  %br/
+  + Washmachine
+  %br/
+  + Fax
+  %br/
+  + Print
+  %br/
+  + Coffee machine
+  %br/
+  + Land phone free to call the US
+  %br/
+  + 3D printer
+  %br/
+  + PirateBox
+  %br/
+  + Kitchen
+  %br/
+  + Nearby cool places (eat, food)
+%p
+  %br/
+  Counter for private places (how many times a request has been accepted)
+  %br/
+  Rating system for places. Like/ not like
+  %br/
+  Design for place pages
+  %br/
+  Drag and drop on photo for places
+  %br/
+  Map on place page should be zoomable
+%p
+  \- having some info about children facilities
+  %br/
+  \- having info about opening hours of each place
+  %br/
+  \- The "Instant Networking" button. In my opinion this is the killer application. For instance, if I'd want to have biz lunch but don't want to go alone, I could press it 24h in advance and meet someone at one of the public coworfing spots.
+  %br/
+  \- if there need to be any suggestions, i think that will be nice if : in the page of "places", we can see the capacity of hosting of the place "like we have enough room/chaires for max 5 persons" ! and more awesome, if there is something "realtime" to see the places/chaires available at a specific time!
+  %br/
+  \- tag places
+  %br/
+  \- make a calendar to display events of places
+  %br/
+  \- users share their projects
+  %br/
+  \- put featured place on landing
+  %br/
+  \- wish list
+  %br/
+  \- organize an activity (connect to facebook)
+  %br/
+  \- make groups
+  %br/  
+  
 
 
 
